improved styling. Started media queries

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     	<meta name="keywords" content="one, two, three">
 
 		<title>Title in the tab</title>
-
-		<!-- external CSS link -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet"> 
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<div>
 			<h1>Books Read This Year</h1>
+			
+			<p>Keep track of the books you've read this year by entering the ISBN # below. <br>	Come back to track your progress and see how many pages you've read this year!</p>
 			<input type="text" name="" value="" placeholder="Please enter ISBN">
-			<button type="button" name="button">Get Book Info</button>
+			<button type="button" name="button">Add Book!</button>
 
 			<h2></h2>
 		</div>
