project working as intended

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
@@ -19,8 +20,11 @@
 			<p>Keep track of the books you've read this year by entering the ISBN # below. <br>	Come back to track your progress and see how many pages you've read this year!</p>
 			<input type="text" name="" value="" placeholder="Please enter ISBN">
 			<button type="button" name="button">Add Book!</button>
-
-			<h2></h2>
+			<div class="break"></div>
+			<section class="books">
+				
+			</section>
+			<h3 class="pages"></h3>
 		</div>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
